app.blade.phpの作成

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -9,6 +9,12 @@ server {
         try_files $uri $uri/ /index.php$is_args$args;
     }
 
+    # 追加: storageへのアクセスを許可
+    location /storage/ {
+        alias /var/www/public/storage/;
+        try_files $uri $uri/ =404;
+    }
+
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass php:9000;
@@ -18,3 +24,4 @@ server {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 }
+
