テーブルとリレーションの再構築、商品詳細ページ作成

--- a/docker/nginx/default.conf
+++ b/docker/nginx/default.conf
@@ -5,6 +5,12 @@ server {
 
     root /var/www/public;
 
+    # 追加: storageへのアクセスを許可
+    location /storage/ {
+        alias /var/www/storage/app/public/;
+        try_files $uri $uri/ =404;
+    }
+
     location / {
         try_files $uri $uri/ /index.php$is_args$args;
     }
