--- a/src/.env.testing
+++ b/src/.env.testing
@@ -11,9 +11,10 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=mysql
 DB_PORT=3306
-DB_DATABASE=laravel_test_db
-DB_USERNAME=laravel_test_user
-DB_PASSWORD=laravel_test_pass
+DB_DATABASE=laravel_db
+DB_USERNAME=laravel_user
+DB_PASSWORD=laravel_pass
+DB_PREFIX=test_
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -29,7 +30,7 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
+MAIL_HOST=host.docker.internal
 MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
